# ~~~
# This file is part of the dune-gdt project:
#   https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt
# Copyright 2010-2021 dune-gdt developers and contributors. All rights reserved.
# License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
#      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
#          with "runtime exception" (http://www.dune-project.org/license.html)
# Authors:
#   Rene Fritze (2019)
# ~~~

[aliases]
test = pytest

[tool:pytest]
testpaths = test/
python_files = test/*.py
python_class = Test
junit_family=xunit2
pep8maxlinelength = 120
pep8ignore = E221,E226,E241,E242
addopts= -p no:warnings

[metadata]
# this is mandatory to have license end up in .whl
license_file = LICENSE.txt
