[build-system]
requires = ['setuptools>=61', 'wheel', 'packaging']
build-backend = "setuptools.build_meta"

[project]
name = "dune.xt"
description = "Python for Dune-Gdt"
readme = "README.md"
# LICENSE.txt is bundled into the wheel via setup.cfg ([metadata] license_file); we intentionally do not set a [project]
# license field, as the dual BSD-2-Clause / GPL-2.0+ license is not a single SPDX expression.
authors = [{ name = "The dune-gdt devs", email = "felix.schindler@wwu.de" }]
# version and the runtime dependencies are supplied by setup.py: the version comes from the CMake-generated
# dune/xt/_version.py and mpi4py is added only when the bindings were built with MPI.
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt"

[project.optional-dependencies]
# The examples were validated against pyMOR 2022.2.0 (the minimal version that installs in a 3.10 venv), so we keep that
# exact pin only on older Python via an environment marker; on 3.11+ (e.g. the 3.13 used by the docs build/CI wheels)
# pyMOR is left unpinned so a compatible newer release is resolved.
visualisation = ["k3d>=2.15.2", "vtk", "ipywidgets", "lxml", "xmljson", "matplotlib", "wurlitzer"]
# clangquill parses the in-tree dune-gdt/dune-xt C++ headers with libclang and renders the MyST C++ API pages consumed by
# the Sphinx build (see docs/source/conf.py); it replaces the previous Doxygen-based API setup. meshio is required by
# pymor's discretize_gmsh (used in the gmsh tutorial) to read Gmsh meshes.
docs = [
    "python-slugify",
    "sphinxcontrib-bibtex",
    "furo",
    "myst-nb>=0.16",
    "pymor",
    "clangquill>=0.3.0",
    "plotly",
    "meshio>=4.4",
]
examples = ['pymor==2022.2.0; python_version < "3.11"', 'pymor; python_version >= "3.11"']
infrastructure = [
    "pylicense3>=0.4.1",
    "pytest",
    "pytest-cov",
    "pytest-regressions",
    "cmake_format==0.4.1",
    "codecov",
    "yapf==0.32",
    "pytest-notebook==0.8.0",
    "notebook",
    "jinja2",
    "docutils",
    "hypothesis",
    "dune.xt[visualisation,docs]",
]
parallel = ["bokeh", "metis"]
all = ["dune.xt[visualisation,docs,examples,infrastructure,parallel]"]

# Package discovery, the `dune` namespace package and the .so package data are configured in setup.py, alongside the
# BinaryDistribution wheel forcing.
