[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dune.xt"
description = "Python for Dune-Gdt"
readme = "README.md"
# LICENSE.txt is bundled into the wheel via [project] license-files (hatchling copies it into the .dist-info); we
# intentionally do not set a [project] license field, as the dual BSD-2-Clause / GPL-2.0+ license is not a single SPDX
# expression.
license-files = ["LICENSE.txt"]
authors = [{ name = "The dune-gdt devs", email = "felix.schindler@wwu.de" }]
# version and the runtime dependencies are build-time-dynamic: the version is read by [tool.hatch.version] from the
# CMake-generated dune/xt/_version.py, and the dependencies (mpi4py is added only when the bindings were built with MPI)
# are computed by the custom metadata hook in hatch_build.py from the same file.
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt"

[project.optional-dependencies]
# The examples were validated against pyMOR 2022.2.0 (the minimal version that installs in a 3.10 venv), so we keep that
# exact pin only on older Python via an environment marker; on 3.11+ (e.g. the 3.13 used by the docs build/CI wheels)
# pyMOR is left unpinned so a compatible newer release is resolved.
visualisation = ["k3d>=2.15.2", "vtk", "ipywidgets", "lxml", "xmljson", "matplotlib", "wurlitzer"]
# clangquill parses the in-tree dune-gdt/dune-xt C++ headers with libclang and renders the MyST C++ API pages consumed by
# the Sphinx build (see docs/source/conf.py); it replaces the previous Doxygen-based API setup. meshio is required by
# pymor's discretize_gmsh (used in the gmsh tutorial) to read Gmsh meshes.
docs = [
    "python-slugify",
    "sphinxcontrib-bibtex",
    "furo",
    "myst-nb>=0.16",
    "pymor",
    "clangquill>=0.3.0",
    "plotly",
    "meshio>=4.4",
]
examples = ['pymor==2022.2.0; python_version < "3.11"', 'pymor; python_version >= "3.11"']
infrastructure = [
    "pylicense3>=0.4.1",
    "pytest",
    "pytest-cov",
    "pytest-regressions",
    "cmake_format==0.4.1",
    "codecov",
    "yapf==0.32",
    "pytest-notebook==0.8.0",
    "notebook",
    "jinja2",
    "docutils",
    "hypothesis",
    "dune.xt[visualisation,docs]",
]
parallel = ["bokeh", "metis"]
all = ["dune.xt[visualisation,docs,examples,infrastructure,parallel]"]

# The version is extracted (without importing the package, which would pull in metis and the compiled extensions) from
# the CMake-generated dune/xt/_version.py.
[tool.hatch.version]
path = "dune/xt/_version.py"
pattern = '__git_revision__ = "(?P<version>[^"]+)"'

# Computes `dependencies` (see hatch_build.py); reads __have_mpi__ from the same generated _version.py.
[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.wheel]
# The .so modules are compiled build outputs (dropped into the binary dir by CMake); force-include them as artifacts so
# they always ship, even if a VCS-ignore rule would otherwise exclude them.
artifacts = ["**/*.so"]
# Package the whole `dune` namespace tree (dune/__init__.py declares the namespace so dune.xt and dune.gdt coexist).
packages = ["dune"]

# Force a platform (non-pure) wheel via the build hook in hatch_build.py (CustomBuildHook): hatchling has no declarative
# option for this, so the hook sets pure_python=False (Root-Is-Purelib: false) and infer_tag=True (stamp the building
# interpreter's platform tag, e.g. cp313-cp313-linux_x86_64). Required because the package ships pre-built .so
# extensions and is passed through `auditwheel repair`, which rejects pure py3-none-any wheels.
[tool.hatch.build.targets.wheel.hooks.custom]

# Install the helper scripts into the wheel's scripts directory (.data/scripts -> bin on install), mirroring the former
# setup.py `scripts=` (scripts/*.py plus wrapper/dune_xt_execute.py). shared-scripts cannot glob, so the scripts/*.py
# files are listed explicitly to exclude scripts/CMakeLists.txt.
[tool.hatch.build.targets.wheel.shared-scripts]
"scripts/__init__.py" = "__init__.py"
"scripts/dxt_code_generation.py" = "dxt_code_generation.py"
"scripts/generate_compare_functions.py" = "generate_compare_functions.py"
"wrapper/dune_xt_execute.py" = "dune_xt_execute.py"
