[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dune.xt"
description = "Python for Dune-Gdt"
readme = "README.md"
# LICENSE.txt is bundled into the wheel via [project] license-files (hatchling copies it into the .dist-info); we
# intentionally do not set a [project] license field, as the dual BSD-2-Clause / GPL-2.0+ license is not a single SPDX
# expression.
license-files = ["LICENSE.txt"]
authors = [{ name = "The dune-gdt devs", email = "felix.schindler@wwu.de" }]
# version and the runtime dependencies are build-time-dynamic: the version is read by [tool.hatch.version] from the
# CMake-generated dune/xt/_version.py, and the dependencies (mpi4py is added only when the bindings were built with MPI)
# are computed by the custom metadata hook in hatch_build.py from the same file.
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://zivgitlab.uni-muenster.de/ag-ohlberger/dune-community/dune-gdt"

[project.optional-dependencies]
# The examples were validated against pyMOR 2022.2.0 (the minimal version that installs in a 3.10 venv), so we keep that
# exact pin only on older Python via an environment marker; on 3.11+ (e.g. the 3.13 used by the docs build/CI wheels)
# pyMOR is left unpinned so a compatible newer release is resolved.
visualisation = ["k3d>=2.15.2", "vtk", "ipywidgets", "lxml", "xmljson", "matplotlib", "wurlitzer"]
# clangquill parses the in-tree dune-gdt/dune-xt C++ headers with libclang and renders the MyST C++ API pages consumed by
# the Sphinx build (see docs/source/conf.py); it replaces the previous Doxygen-based API setup. meshio is required by
# pymor's discretize_gmsh (used in the gmsh tutorial) to read Gmsh meshes.
docs = [
    "python-slugify",
    "sphinxcontrib-bibtex",
    "furo",
    "myst-nb>=0.16",
    "pymor",
    # clangquill only supports Python >=3.13. Mark it so that resolving the project's extras (which `uv run --group test`
    # does in project mode, see cmake/modules/DuneXTTesting.cmake) stays satisfiable on the Python 3.12 test builds; the
    # docs themselves are built on 3.13. Without the marker the test resolution fails with an unsatisfiable requirement.
    # >=0.6.0 for the hierarchical group_by="namespace" page layout (docs/source/conf.py).
    'clangquill>=0.6.0; python_version >= "3.13"',
    "plotly",
    "meshio>=4.4",
]
examples = ['pymor==2022.2.0; python_version < "3.11"', 'pymor; python_version >= "3.11"']
infrastructure = [
    "pylicense3>=0.4.1",
    "pytest",
    "pytest-cov",
    "pytest-regressions",
    # coverage processors driven by the CMake coverage_python / coverage_cpp targets:
    # coverage.py combines the per-suite pytest data files into one XML, gcovr turns the
    # C++ gcov data into Cobertura XML (see cmake/modules/DuneXTTesting.cmake).
    "coverage",
    "gcovr",
    "cmake_format==0.4.1",
    "codecov",
    "yapf==0.32",
    "pytest-notebook==0.8.0",
    "notebook",
    "jinja2",
    "docutils",
    "hypothesis",
    "dune.xt[visualisation,docs]",
]
parallel = ["bokeh", "metis"]
all = ["dune.xt[visualisation,docs,examples,infrastructure,parallel]"]

# The version is extracted (without importing the package, which would pull in metis and the compiled extensions) from
# the CMake-generated dune/xt/_version.py.
[tool.hatch.version]
path = "dune/xt/_version.py"
pattern = '__git_revision__ = "(?P<version>[^"]+)"'

# Computes `dependencies` (see hatch_build.py); reads __have_mpi__ from the same generated _version.py.
[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.wheel]
# The .so modules are compiled build outputs (dropped into the binary dir by CMake); force-include them as artifacts so
# they always ship, even if a VCS-ignore rule would otherwise exclude them.
artifacts = ["dune/**/*.so"]
# Package the whole `dune` namespace tree (dune/__init__.py declares the namespace so dune.xt and dune.gdt coexist).
packages = ["dune"]
# The wheel is assembled in the in-source CMake build dir, so the `dune` tree above is interleaved with build artifacts:
# CMakeFiles/*.cc.o object files, CMake metadata, the binding .cc/.hh sources and configured templates. packages=["dune"]
# would otherwise ship all of it -- the unstripped *.cc.o objects alone added ~900 MB and blew the wheel ~8x past Test
# PyPI's 100 MB per-file limit. Ship only the Python sources and the compiled .so modules, matching the behaviour of the
# former setuptools find_packages() + package_data={"": ["*.so"]}.
exclude = [
  "**/CMakeFiles/**",
  "**/*.o",
  "**/*.cc",
  "**/*.hh",
  "**/*.cmake",
  "**/CMakeLists.txt",
  "**/*.in",
]

# Force a platform (non-pure) wheel via the build hook in hatch_build.py (CustomBuildHook): hatchling has no declarative
# option for this, so the hook sets pure_python=False (Root-Is-Purelib: false) and infer_tag=True (stamp the building
# interpreter's platform tag, e.g. cp313-cp313-linux_x86_64). Required because the package ships pre-built .so
# extensions and is passed through `auditwheel repair`, which rejects pure py3-none-any wheels.
[tool.hatch.build.targets.wheel.hooks.custom]

# Install the helper scripts into the wheel's scripts directory (.data/scripts -> bin on install), mirroring the former
# setup.py `scripts=` (scripts/*.py plus wrapper/dune_xt_execute.py). shared-scripts cannot glob, so the scripts/*.py
# files are listed explicitly to exclude scripts/CMakeLists.txt.
[tool.hatch.build.targets.wheel.shared-scripts]
"scripts/__init__.py" = "__init__.py"
"scripts/dxt_code_generation.py" = "dxt_code_generation.py"
"scripts/generate_compare_functions.py" = "generate_compare_functions.py"
"wrapper/dune_xt_execute.py" = "dune_xt_execute.py"

# PEP 735 dependency group with the full set of dependencies the test suite needs. The `xt_test_python` CMake target
# (cmake/modules/DuneXTTesting.cmake) runs `uv run --group test ...` from the binary dir (this pyproject is the
# assembly-point config), so the deps are declared here in one place rather than spelled out as individual `--with`
# flags on the uv command line. Besides the pytest tooling this includes the runtime deps exercised by the pure-Python
# unit tests: pyparsing (dune.xt.cmake.parse_cache, dxt_code_generation), jinja2 (dxt_code_generation), the VTK
# reader stack (vtk/lxml/xmljson) and hatchling (the hatch_build.py CustomMetadataHook/CustomBuildHook tests).
[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-regressions",
  "hypothesis",
  "pyparsing",
  "jinja2",
  "vtk",
  "lxml",
  "xmljson",
  "hatchling",
]

# Migrated from the former setup.cfg [tool:pytest]. python_files is load-bearing: the test modules are named e.g.
# test/base.py (not test_*.py), so without this pattern pytest would collect nothing. The `make xt_test_python` target
# runs pytest from the binary dir, where this pyproject.toml is the assembly-point config. (The obsolete pytest-pep8
# options and the setuptools `[aliases] test = pytest` from setup.cfg are intentionally dropped.)
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test/*.py"]
junit_family = "xunit2"
addopts = "-p no:warnings"
